fix gaps

--- a/styles/Result.module.css
+++ b/styles/Result.module.css
@@ -4,12 +4,12 @@
 .widthContainer {
   display: flex;
   flex-direction: column;
-  gap: min(2rem, 48px);
+  gap: min(3rem, 48px);
 }
 .description {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: min(4rem, 96px);
+  gap: min(4rem, 96px) 1rem;
 }
 .title {
   font-size: clamp(2rem, -1.5556rem + 7.4074vw, 4rem);
@@ -22,9 +22,6 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem 3rem;
 }
-.gridSection:not(:first-of-type) {
-  margin-top: 2rem;
-}
 
 .group {
   display: flex;
@@ -35,7 +32,7 @@
   gap: 1.5rem;
 }
 .otherChallenges {
-  gap: min(2rem, 48px) 3rem;
+  gap: min(3rem, 48px);
 }
 .otherChallengesList {
   padding: 0;
@@ -83,12 +80,8 @@
 @media (max-width: 48rem) {
   .description {
     grid-template-columns: 1fr;
-    gap: max(1rem, 16px);
   }
   .gridSection {
     grid-template-columns: 1fr;
-  }
-  .gridSection:not(:first-of-type) {
-    margin-top: 0;
   }
 }
